<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.37"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/map_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:text="@string/map_title"
                    android:textColor="@color/loading_inside_backcolor"
                    android:textSize="30sp"
                    app:fontFamily="monospace"
                    app:layout_constraintBottom_toTopOf="@+id/map" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.55"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.3"
                        android:adjustViewBounds="false"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_1"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_btn_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/map" />

                    <ImageButton
                        android:id="@+id/btn_2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.3"
                        android:adjustViewBounds="false"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_2"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_btn_2"
                        app:layout_constraintStart_toEndOf="@+id/btn_1"
                        app:layout_constraintTop_toBottomOf="@+id/map" />

                    <ImageButton
                        android:id="@+id/btn_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.3"
                        android:adjustViewBounds="false"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_3"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_btn_3"
                        app:layout_constraintStart_toEndOf="@+id/btn_2"
                        app:layout_constraintTop_toBottomOf="@+id/map" />

                </LinearLayout>
            </LinearLayout>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/title_activity_map"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/btn_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.45"
                android:background="@color/loading_outside_backcolor"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/local_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="在鳳凰大道上，圖書館旁邊"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
            </LinearLayout>

            <TextView
                android:id="@+id/bottom_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.18"
                android:text="@string/chineseAppName"
                android:textColor="@color/loading_outside_backcolor"
                android:textSize="20sp" />

        </LinearLayout>


    </FrameLayout>


</android.support.constraint.ConstraintLayout>